# miner

./: .dockerignore  .gitignore  Dockerfile.cli  Dockerfile.converter  Dockerfile.converter-api  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: sync-to-huggingface.yml
frontend/: app.js  build.js  config.example.js  index.html  package-lock.json  package.json  styles.css  wrangler.toml
frontend/scripts/: write-config.js
frontend/src/: main.tsx  vite-env.d.ts
scripts/: convert-xls-to-xlsx  extract-excel-metadata
src/excel_metadata_extractor/: __init__.py  cli.py  converter_api.py  downloader.py  extractor.py  preview.py  statistical.py  web.py
src/excel_metadata_extractor/web_static/: app.js  index.html  styles.css
tests/: test_downloader.py  test_extractor.py  test_web_cors.py
